# zcode

./: .gitignore  .yamllint.yml  README.md  REMOVED.md  agents.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  zcode-agent-mock.html  zcode-mock.html
.github/workflows/: build.yml  check.yml
.zcode/skills/test-skill/: SKILL.md
docs/: skills.md
scripts/: ensure-runtime.cjs  install-skill.ps1  install-skill.sh
scripts/fetch-runtime/: fetch-linux.sh  fetch-macos.sh  fetch-windows.ps1
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/skill-creator/: SKILL.md
src-tauri/src/: agent.rs  agent_command.rs  commands.rs  compaction.rs  error.rs  lib.rs  main.rs  model.rs  provider.rs  runtime_env.rs  settings.rs  skills.rs  sse.rs  watcher.rs
src-tauri/src/prompts/: system.md  windows_shell.md
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
src-tauri/tests/: agent_e2e.rs  agent_mock.rs  meow_e2e.rs  provider_smoke.rs  runtime_integration.rs  settings_keychain.rs  skill_e2e.rs  tool_smoke.rs
src/lib/components/: AgentFab.svelte  AgentPanel.svelte  Editor.svelte  MarkdownRenderer.svelte  SettingsDialog.svelte  Sidebar.svelte  TitleBar.svelte  ToolConfirmDialog.svelte
src/lib/i18n/: en.json  index.ts  zh.json
src/lib/renderer/: pipeline.ts
src/lib/stores/: agentSession.ts  document.ts  externalFile.ts  folderTree.ts  pinnedFolder.ts  recents.ts  settings.ts  sharedStore.ts  skills.svelte.ts  workspaceFiles.ts
src/lib/tauri/: ai.ts  files.ts  watcher.ts
src/lib/utils/: fileTypes.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
